--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Force vi mode keys if $EDITOR is not explicity 'vi'
 setw -g mode-keys vi
-# set -g mouse on
+set -g mouse on
  
 set -g default-terminal "xterm"
 
@@ -17,6 +17,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind ` select-window -t 0
+bind H resize-pane -L 10
+bind L resize-pane -R 10
+bind J resize-pane -D 10
+bind K resize-pane -U 10
 
 # start counting by 1
 set -g base-index 1
