--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,10 @@
 # Force vi mode keys if $EDITOR is not explicity 'vi'
 setw -g mode-keys vi
 set -g mouse on
- 
+set-option -g default-shell /usr/bin/bash
+
 set -g default-terminal "xterm"
+#set -g default-terminal "screen.xterm-256color"
 
 unbind C-b
 set -g prefix M-h
