--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -6,7 +6,7 @@
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-center": ["sway/window"],
-    "modules-right": ["custom/mouse", "idle_inhibitor", "network", "pulseaudio", "cpu", "memory", "temperature", "temperature#temp2", "clock", "tray"],
+    "modules-right": ["backlight", "battery", "battery#bat2", "idle_inhibitor", "network", "network#net2", "pulseaudio", "cpu", "memory", "temperature", "temperature#temp2", "clock", "tray"],
     // Modules configuration
      "sway/workspaces": {
          "disable-scroll": true,
@@ -28,11 +28,6 @@
      },
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
-    },
-    "custom/mouse": {
-        "format": "{}",
-        "exec": "$HOME/.bin/rivalbattery.py",
-        "interval": 30,
     },
     "idle_inhibitor": {
         "format": "{icon}",
@@ -101,11 +96,20 @@
         "bat": "BAT2"
     },
     "network": {
-        "interface": "en*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
+        "interface": "*e*", // (Optional) To force the use of this interface
+        "format-wifi": "{essid} ({signalStrength}%) ",
         "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ",
+        "format-linked": "",
+        "format-disconnected": "",
+        "format-alt": ":{bandwidthUpBits} :{bandwidthDownBits} {ifname}: {ipaddr}/{cidr} ",
+        "interval" : 10
+    },
+    "network#net2": {
+        "interface": "*w*", // (Optional) To force the use of this interface
+        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
+        "format-linked": "睊",
+        "format-disconnected": "",
         "format-alt": ":{bandwidthUpBits} :{bandwidthDownBits} {ifname}: {ipaddr}/{cidr} ",
         "interval" : 10
     },
